kompose_generated_files/cassandra-cluster-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra-cluster
  name: cassandra-cluster
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: cassandra-cluster
    spec:
      containers:
      - image: cassandra:3.0
        name: cassandra-cluster
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/cassandra
          name: cassandra-volume
      restartPolicy: Always
      volumes:
      - name: cassandra-volume
        persistentVolumeClaim:
          claimName: cassandra-volume
status: {}
