kompose_generated_files/chat-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: chat
  name: chat
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: chat
    spec:
      containers:
      - image: chat
        name: chat
        ports:
        - containerPort: 4001
        resources: {}
      restartPolicy: Always
status: {}
