kompose_generated_files/gw-sensor-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: gw-sensor
  name: gw-sensor
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gw-sensor
    spec:
      containers:
      - image: gw-sensor
        name: gw-sensor
        ports:
        - containerPort: 3002
        resources: {}
      restartPolicy: Always
status: {}
