kompose_generated_files/history-retriever-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: history-retriever
  name: history-retriever
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: history-retriever
    spec:
      containers:
      - image: history-retriever
        name: history
        ports:
        - containerPort: 4002
        resources: {}
      restartPolicy: Always
status: {}
