kompose_generated_files/ingest-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: ingest
  name: ingest
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ingest
    spec:
      containers:
      - image: ingest
        name: ingest
        ports:
        - containerPort: 4003
        resources: {}
      restartPolicy: Always
status: {}
