kompose_generated_files/packager-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: packager
  name: packager
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: packager
    spec:
      containers:
      - image: packager
        name: packager
        ports:
        - containerPort: 4004
        resources: {}
      restartPolicy: Always
status: {}
