kompose_generated_files/tasker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: tasker
  name: tasker
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: tasker
    spec:
      containers:
      - image: tasker
        name: tasker
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
status: {}
