kompose_generated_files/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: chat
  name: chat
spec:
  ports:
  - name: "4001"
    port: 4001
    targetPort: 4001
  selector:
    io.kompose.service: chat
status:
  loadBalancer: {}
