kompose_generated_files/gw-sensor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: gw-sensor
  name: gw-sensor
spec:
  ports:
  - name: "3002"
    port: 3002
    targetPort: 3002
  selector:
    io.kompose.service: gw-sensor
status:
  loadBalancer: {}
