kompose_generated_files/history-retriever-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: history-retriever
  name: history-retriever
spec:
  ports:
  - name: "4002"
    port: 4002
    targetPort: 4002
  selector:
    io.kompose.service: history-retriever
status:
  loadBalancer: {}
