kompose_generated_files/ingest-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: ingest
  name: ingest
spec:
  ports:
  - name: "4003"
    port: 4003
    targetPort: 4003
  selector:
    io.kompose.service: ingest
status:
  loadBalancer: {}
